# caged-download-lambda

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  debug_handler.py  pyproject.toml
.github/workflows/: deploy.yml
config/: ruff.toml
events/: event.json
sample/: check_availability_return.json  sample_event.json
src/: exceptions.py  handler.py  service.py  settings.py
src/lambda_name/: handler.py  service.py  settings.py
tests/unit/: test_handler.py  test_service.py
